components/oauth2-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "no-cache, no-store, must-revalidate" always;
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
        path: /oauth2
        pathType: ImplementationSpecific
    host: "set by kustomize"
  tls:
  - hosts:
    - "set by kustomize"
    secretName: oauth-tls-cert
